finally fixed .ARC file association