@@ -18,9 +18,9 @@ package com.thesuncat.whitehole.swing;
 import com.thesuncat.whitehole.Settings;
 import com.thesuncat.whitehole.Whitehole;
 import java.awt.Color;
-import java.io.BufferedWriter;
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.OutputStreamWriter;
+import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.logging.Level;
@@ -94,32 +94,31 @@ public class SettingsForm extends javax.swing.JDialog {
     }
     
     private void installAssoc() {
-        try {
-            String command = "\\\"" + System.getProperty("java.home") + "\\javaw.exe\\\" -jar \\\""
-                    + Whitehole.class.getProtectionDomain().getCodeSource().getLocation().getPath().substring(1).replace("/", "\\") + "\\\" \\\"%1\\\"";
-            
-            Runtime.getRuntime().exec("reg add HKCU\\Software\\Classes\\.arc /t REG_SZ /d WhiteholeFile"); // Add Value
-            Runtime.getRuntime().exec("reg add HKCU\\Software\\Classes\\WhiteholeFile\\Shell\\Open\\Command /t REG_SZ /d \"" + command + "\""); // Add Value
-        } catch (IOException ex) {
-            JOptionPane.showMessageDialog(this, "well im dumb");
-            Logger.getLogger(SettingsForm.class.getName()).log(Level.SEVERE, null, ex);
-        }
+        String command = "\\\"" + System.getProperty("java.home") + "\\bin\\javaw.exe\\\" -jar \\\""
+                + Whitehole.class.getProtectionDomain().getCodeSource().getLocation().getPath().substring(1).replace("/", "\\") + "\\\" \\\"%1\\\"";
+        
+        execCommand("reg add HKCU\\SOFTWARE\\Classes\\.arc /t REG_SZ /d ArcFileNintendo /f");
+        execCommand("reg add HKCU\\SOFTWARE\\Classes\\ArcFileNintendo\\shell\\open\\command /t REG_SZ /d \"" + command + "\" /f");
     }
     
     private void uninstallAssoc() {
+        execCommand("reg delete HKCU\\SOFTWARE\\Classes\\.arc /f");
+        execCommand("reg delete HKCU\\SOFTWARE\\Classes\\ArcFileNintendo /f");
+    }
+    
+    private void execCommand(String com) {
         try {
-            Process p = Runtime.getRuntime().exec("reg delete HKCU\\Software\\Classes\\.arc");
-            BufferedWriter out = new BufferedWriter(new OutputStreamWriter(p.getOutputStream()));
-            out.write("y");
-            out.newLine();
-            out.flush();
+            System.out.println("Trying to execute " + com);
+            ProcessBuilder pb = new ProcessBuilder("cmd.exe", "/c", com);
+            pb.redirectErrorStream(true);
+            Process p = pb.start();
+            BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
+            String line;
+            while((line = in.readLine()) != null) {System.out.println(line);}
             
-            Process p2 = Runtime.getRuntime().exec("reg delete HKCU\\Software\\Classes\\WhiteholeFile");
-            BufferedWriter out2 = new BufferedWriter(new OutputStreamWriter(p2.getOutputStream()));
-            out2.write("y");
-            out2.newLine();
-            out2.flush();
-        } catch (IOException ex) {
+            System.out.println("Exited with " + p.waitFor());
+            p.destroy();
+        } catch (IOException | InterruptedException ex) {
             JOptionPane.showMessageDialog(this, "well im dumb");
             Logger.getLogger(SettingsForm.class.getName()).log(Level.SEVERE, null, ex);
         }
